--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,13 @@
 *{
 	 
-  background :  #2F0000 ;
-   
-  color:#faa; 
+  background: #2F0000;
+  color:#ff8121; 
   padding-left: 4px;
   margin:1px;
   text-decoration: none;
-  
-   
-  font-size:18px;
-  
+  font-size:1.1rem;
   font-family:"Courier";
-   }
+}
 
 
  .INPUT {
@@ -25,10 +21,25 @@
   cursor: text;
   width:800px; 
   height:40px;
-  font-size:16px;
+  font-size:1.2rem;
   border-radius:8px;
    
    
+}
+h1{
+	font-size:2rem;
+	text-align:center;
+	font-family:"Times";
+	font-style:italic;
+	color:#ff8121;
+	padding-bottom:2rem;
+	padding-top:2rem;
+	background-image: linear-gradient(125deg,#1F0000, #3B0000  ,#100000);
+    
+}
+hr{
+	  border: 1px solid #1f0000;
+ 
 }
  .BTN{
 	 align-items: center;
@@ -37,18 +48,20 @@
   color:#ef4000; 
   padding-left: 12px;
   padding-right: 12px;
+  padding-bottom:0.5rem;
+	padding-top:0.5rem;
   margin:5px;
   text-decoration: none;
   cursor: pointer;
    
-  font-size:24px;
+  font-size:1.5rem;
   border-radius:8px;
    
   display:inline;
 	 min-width:34px;
 	  
-	 height:25px;
-	 font-size:14px;
+	 height:2rem;
+	 font-size:0.9rem;
 	 display:inline;
  }
 
