--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1{
 	padding-bottom:2rem;
 	padding-top:2rem;
 	background-image: linear-gradient(125deg,#1F0000, #3B0000  ,#100000);
-    
+    user-select:none;
 }
 hr{
 	  border: 1px solid #1f0000;
