--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   margin:1px;
   text-decoration: none;
   cursor: text;
-  width:800px; 
+  width:70rem; 
   height:40px;
   font-size:1.2rem;
   border-radius:8px;
